--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
-    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
-    "react-syntax-highlighter": "^15.5.0",
-    "sonner": "^1.4.3"
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
